# symbolic-regression

./: LICENSE  README.md
rust/: Cargo.toml
rust-lib/: Cargo.toml
rust-lib/resources/: input_data_sin.xlsx  input_data_wrong_cell.xlsx  input_data_wrong_header.xlsx
rust-lib/src/: _parser.rs  expression_tree.rs  input_data.rs  lib.rs  model.rs  parser.rs  serializer.rs  settings.rs  types.rs
rust-lib/src/expression_tree/: compute.rs  display.rs  output.rs  random.rs  serializer.rs  subs.rs  traversal.rs  types.rs
rust-lib/src/expression_tree/parser/: lexer.rs
rust-lib/src/model/: crossing.rs  default.rs  fitness.rs  input_data.rs  model.rs  mutations.rs  settings.rs
rust-lib/src/model/default/: core.rs  stop_criterion.rs  utils.rs
rust-lib/src/model/settings/: core.rs  default.rs  settings.rs  types.rs
rust/command_line/: Cargo.toml
rust/command_line/src/: main.rs
rust/lib/: Cargo.toml
rust/lib/resources/: input_data.xlsx  input_data_without_rows.xlsx  input_data_wrong_row.xlsx
rust/lib/src/: expression_tree.rs  model.rs
rust/lib/src/expression_tree/: compute.rs  parser.rs  random.rs  subs.rs  traversal.rs  types.rs
rust/lib/src/expression_tree/parser/: error.rs  lexer.rs  parser.rs
rust/lib/src/model/: crossing.rs  default.rs  fitness.rs  input_data.rs  mutations.rs  settings.rs
rust/lib/src/model/default/: core.rs  generation_size.rs  stop_criterion.rs  utils.rs
rust/lib/src/model/settings/: core.rs  default.rs
