[package]
name = "symbolic-regression-cl"
version = "0.1.0"
authors = ["Artem Orlov <squakrazv@gmail.com>"]
edition = "2021"
description = """
Command line crate for solving the problem of symbolic regression.
"""
homepage = "https://github.com/SquakR/symbolic-regression"
repository = "https://github.com/SquakR/symbolic-regression"
license = "MIT"
keywords = ["symbolic regression"]
categories = ["algorithms", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symbolic-regression = { path = "../lib" }
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
calamine = "0.18.0"
