[package]
name = "symbolic-regression"
version = "0.1.0"
authors = ["Artem Orlov <squakrazv@gmail.com>"]
edition = "2021"
description = """
Library crate for solving the problem of symbolic regression.
"""
homepage = "https://github.com/SquakR/symbolic-regression"
repository = "https://github.com/SquakR/symbolic-regression"
license = "MIT"
keywords = ["symbolic regression"]
categories = ["algorithms", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
take_mut = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.18.0"
